# LangchainRAG

./: .gitignore  README.md  pyproject.toml
src/langchain_rag/: app.py  main.py  tool.py  vector_database.py
src/temp/: base_page.md
