[project]
name = "langchain-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Varun G",email = "varungangu1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "markdownify (>=0.14.1,<0.15.0)",
    "requests (>=2.32.3,<3.0.0)",
    "langchain (>=0.3.17,<0.4.0)",
    "langchain-openai (>=0.3.3,<0.4.0)",
    "langgraph (>=0.2.69,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
